<resources>
    <string name="content_authority">com.alpha.popularmoviesii</string>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="description">Movie Name</string>
    <string name="rating">User rating </string>
    <string name="popularity">Popularity </string>
    <string name="release_date">Release date </string>
    <string name="overview">Plot synopsis </string>
    <string name="title_activity_settings">App Settings</string>
    <string name="sort_order">Sort order</string>
    <string name="sort_order_summary">Set sort order of movies</string>
    <string name="settings">Settings</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="no_favorites">No Favorite Movies are added. Add your favorite movies to see them offline.</string>
</resources>
