<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context="com.alpha.popularmoviesii.MovieDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="cards main container">

        <ImageView
            android:id="@+id/imdb_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/description"
            android:visibility="gone"
            android:src="@drawable/tmdb"
            android:tag="tmdb_tag" />

        <LinearLayout
            android:id="@+id/linear_movie_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/description"
                android:src="@drawable/movies"
                android:tag="image_tag" />

        </LinearLayout>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/movie_details_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/description"
                    android:src="@drawable/movies" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/movie_release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_title"
                    android:layout_toRightOf="@id/movie_poster"
                    android:text="@string/release_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_release_date_title"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/movie_votes_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_release_date"
                    android:layout_toRightOf="@id/movie_poster"
                    android:text="@string/rating"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_votes_title"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/movie_popularity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_votes"
                    android:layout_toRightOf="@id/movie_poster"
                    android:text="@string/popularity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_popularity_title"
                    android:layout_toRightOf="@id/movie_poster"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/fav_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description"
                    android:src="@drawable/star"
                    android:background="@color/material_blue_grey_800"
                    android:layout_alignBottom="@+id/movie_popularity"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/movie_overview_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/movie_overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="4dp"
                    android:text="@string/overview"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/light_gray" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="4dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/movie_trailer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/movie_trailer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="4dp"
                    android:text="@string/trailers"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/light_gray" />


                <LinearLayout
                    android:id="@+id/linear_scroll_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linear_listview_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/movie_reviews_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/movie_reviews_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="4dp"
                    android:text="@string/reviews"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/light_gray" />


                <LinearLayout
                    android:id="@+id/linear_scroll_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linear_listview_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
